--- a/app/src/main/res/layout/fragment_dynamic_color.xml
+++ b/app/src/main/res/layout/fragment_dynamic_color.xml
@@ -1,5 +1,7 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<!-- <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.rkzk.android.bblmaterialdesign.fragments.DynamicColorFragment"
     android:padding="8dp"
@@ -12,4 +14,11 @@
         android:layout_height="match_parent"
         android:padding="8dp"/>
 
-</FrameLayout>
+</FrameLayout> -->
+<com.rkzk.android.bblmaterialdesign.customviews.AutofitRecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rcvDynamicColor"
+    android:scrollbars="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="8dp" />
