--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,9 @@
 
     <dimen name="fab_width">100dp</dimen>
     <dimen name="fab_margin">2dp</dimen>
+
+    <dimen name="image_detail_height">256dp</dimen>
+
+    <dimen name="card_margin">16dp</dimen>
+
 </resources>
