fix status bar color

--- a/app/src/main/res/layout/activity_image_detail_collapsetoolbar_illustrate.xml
+++ b/app/src/main/res/layout/activity_image_detail_collapsetoolbar_illustrate.xml
@@ -36,7 +36,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:layout_collapseMode="pin" />
+                app:layout_collapseMode="pin"
+                android:fitsSystemWindows="true"/>
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
